--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest --setupFile=jest.setup.js --detectOpenHandles",
-    "dev": "nodemon build/index.js",
-    "start": "nodemon -r tsconfig-paths/register index.ts",
+    "test": "jest",
+    "testc": "jest --coverage",
+    "testw": "jest --watch",
+    "dev": "nodemon build/src/index.js",
+    "start": "nodemon -r tsconfig-paths/register src/index.ts",
     "watch": "tsc -w",
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project tsconfig.json",
+    "ts-dev": "nodemon src/index.ts"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
@@ -24,7 +28,11 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "typeorm": "^0.2.41"
   }
 }
