--- a/server/package.json
+++ b/server/package.json
@@ -5,34 +5,49 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "testc": "jest --coverage",
-    "testw": "jest --watch",
+    "test:c": "jest --coverage",
+    "test:w": "jest --watch",
+    "test:b": "jest --watch --coverage",
     "dev": "nodemon build/src/index.js",
-    "start": "nodemon -r tsconfig-paths/register src/index.ts",
-    "watch": "tsc -w",
-    "build": "tsc --project tsconfig.json",
-    "ts-dev": "nodemon src/index.ts"
+    "start": "node build/src/index.js",
+    "build": "tsc && tsc-alias",
+    "watch": "tsc -w & tsc-alias -w"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
+    "@types/connect-redis": "^0.0.17",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/dotenv-safe": "^8.1.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.2",
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.11",
+    "@types/pg": "^8.6.1",
+    "@types/pg-pool": "^2.0.3",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.3",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
+    "tsc-alias": "^1.4.2",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
+    "argon2": "^0.28.3",
+    "connect-redis": "^6.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "ioredis": "^4.28.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
+    "pg-pool": "^3.4.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41"
   }
 }
