react-query register implemented

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -27,6 +27,7 @@
       "@components/*": ["components/*"],
       "@layout/*": ["layout/*"],
       "@pages/*": ["pages/*"],
+      "@lib/*": ["lib/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js"],
