--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "@fontsource/nunito": "^4.5.1",
     "@fontsource/raleway": "^4.5.0",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "next": "12.0.4",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "16.11.11",
@@ -33,6 +35,7 @@
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "jest": "^27.4.3",
+    "nock": "^13.2.1",
     "react-test-renderer": "^17.0.2",
     "typescript": "4.5.2"
   }
