--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -37,6 +37,9 @@
          "@src/*": [
             "./src/*"
          ],
+         "@middleware/*": [
+            "./src/middleware/*"
+         ],
       }
    },
    "exclude": [
