cypress tests implemeted for login and register page

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -28,7 +28,8 @@
       "@layout/*": ["layout/*"],
       "@pages/*": ["pages/*"],
       "@lib/*": ["lib/*"],
-    }
+    },
+    "types": ["cypress"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js"],
   "exclude": ["node_modules"]
