--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:j": "jest --watch",
+    "test:ci": "jest --ci",
+    "test:c": "cypress open"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.2",
@@ -28,10 +29,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^27.0.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "@types/react-test-renderer": "^17.0.1",
+    "cypress": "^9.1.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "jest": "^27.4.3",
