added logout functionality to api

--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "test:c": "jest --coverage",
     "test:w": "jest --watch",
-    "test:b": "jest --watch --coverage",
-    "dev": "nodemon build/src/index.js",
+    "test:b": "jest --watchAll --coverage",
+    "dev": "nodemon build/src/index.js NODE_ENV=development",
     "start": "node build/src/index.js",
     "build": "tsc && tsc-alias",
     "watch": "tsc -w & tsc-alias -w"
